kubernetes/kustomize/backend/overlays/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    env: qa
spec:
  replicas: 2
