kubernetes/kustomize/backend/overlays/qa/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    env: qa
spec:
  ingressClassName: kong
  rules:
    - host: qa-backend-nodejs.gong.k8s.maas
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 3000
